==> Krajsuu/MiMProject/Src/SSD1331.c <==
#include "stm32f3xx.h"
#include "stm32f3xx_hal_gpio.h"
#include "stm32f3xx_hal_rcc.h"
#include "stm32f3xx_hal_spi.h"
#include "stdio.h"
#include "main.h"
#include "SSD1331.h"

void _sendCmd(uint8_t cmd)
{
    HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin, GPIO_PIN_RESET); // DC = 0 (komenda)
    HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin, GPIO_PIN_RESET); // CS = 0
    HAL_SPI_Transmit(&hspi3, &cmd, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin, GPIO_PIN_SET);   // CS = 1
}

void _sendData(uint8_t data)
{
    HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin, GPIO_PIN_SET);   // DC = 1 (dane)
    HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin, GPIO_PIN_RESET); // CS = 0
    HAL_SPI_Transmit(&hspi3, &data, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin, GPIO_PIN_SET);   // CS = 1
}

void SSD1331_init(void)
{
    // Reset ekranu
    HAL_GPIO_WritePin(RESET_GPIO_Port, RESET_Pin, GPIO_PIN_RESET);
    HAL_Delay(10);
    HAL_GPIO_WritePin(RESET_GPIO_Port, RESET_Pin, GPIO_PIN_SET);
    HAL_Delay(10);

    // Inicjalizacja SSD1331
    _sendCmd(CMD_DISPLAY_OFF);
    _sendCmd(CMD_SET_CONTRAST_A); _sendCmd(0x91);
    _sendCmd(CMD_SET_CONTRAST_B); _sendCmd(0x50);
    _sendCmd(CMD_SET_CONTRAST_C); _sendCmd(0x7D);
    _sendCmd(CMD_MASTER_CURRENT_CONTROL); _sendCmd(0x06);
    _sendCmd(CMD_SET_PRECHARGE_SPEED_A); _sendCmd(0x64);
    _sendCmd(CMD_SET_PRECHARGE_SPEED_B); _sendCmd(0x78);
    _sendCmd(CMD_SET_PRECHARGE_SPEED_C); _sendCmd(0x64);
    _sendCmd(CMD_SET_REMAP); _sendCmd(0x72);
    _sendCmd(CMD_SET_DISPLAY_START_LINE); _sendCmd(0x0);
    _sendCmd(CMD_SET_DISPLAY_OFFSET); _sendCmd(0x0);
    _sendCmd(CMD_NORMAL_DISPLAY);
    _sendCmd(CMD_SET_MULTIPLEX_RATIO); _sendCmd(0x3F);
    _sendCmd(CMD_SET_MASTER_CONFIGURE); _sendCmd(0x8E);
    _sendCmd(CMD_POWER_SAVE_MODE); _sendCmd(0x00);
    _sendCmd(CMD_PHASE_PERIOD_ADJUSTMENT); _sendCmd(0x31);
    _sendCmd(CMD_DISPLAY_CLOCK_DIV); _sendCmd(0xF0);
    _sendCmd(CMD_SET_PRECHARGE_VOLTAGE); _sendCmd(0x3A);
    _sendCmd(CMD_SET_V_VOLTAGE); _sendCmd(0x3E);
    _sendCmd(CMD_DEACTIVE_SCROLLING);
    _sendCmd(CMD_NORMAL_BRIGHTNESS_DISPLAY_ON);
}

void SSD1331_drawPixel(uint16_t x, uint16_t y, uint16_t color)
{
    if ((x < 0) || (x >= RGB_OLED_WIDTH) || (y < 0) || (y >= RGB_OLED_HEIGHT))
        return;
    //set column point
    _sendCmd(CMD_SET_COLUMN_ADDRESS);
    _sendCmd(x);
    _sendCmd(RGB_OLED_WIDTH-1);
    //set row point
    _sendCmd(CMD_SET_ROW_ADDRESS);
    _sendCmd(y);
    _sendCmd(RGB_OLED_HEIGHT-1);

    HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin,GPIO_PIN_SET);; //cs
    HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin,GPIO_PIN_RESET);; //cs

	_sendData(color >> 8);
	_sendData(color);

	HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin,GPIO_PIN_SET);; //cs

}

void SSD1331_Chr(LcdFontSize size, unsigned char ch, uint16_t chr_color, uint16_t bg_color) {
	unsigned char y, x, sx, sy;
	uint16_t color;
	/////uint16_t cx=CHR_X*6*size;
	uint16_t cx=CHR_X;
	/////uint16_t cy=CHR_Y*8*size;
	uint16_t cy=CHR_Y;

	if ( (cx + 6*size > RGB_OLED_WIDTH) || (cy + 8*size > RGB_OLED_HEIGHT) ) {
		return;
	}

	// CHR
    if ( (ch >= 0x20) && (ch <= 0x7F) )
    {
        // offset in symbols table ASCII[0x20-0x7F]
        ch -= 32;
    }
    else if (ch >= 0xC0)
    {
        // offset in symbols table CP1251[0xC0-0xFF] (Cyrillic)
        ch -= 96;
    }
    else
    {
        // Ignore unknown symbols
        ch = 95;
    }

    if ((size > FONT_1X) & (ch > 15) & (ch < 26)) {
        ch -= 16;
    	for (sy = 0; sy<size; sy++) {
    	for (y = 0; y<8; y++ ) {
    		//set column point
    		_sendCmd(CMD_SET_COLUMN_ADDRESS);
    		_sendCmd(cx);
    		_sendCmd(RGB_OLED_WIDTH-1);
    		//set row point
    		_sendCmd(CMD_SET_ROW_ADDRESS);
    		_sendCmd(y + cy + sy*8);
    		_sendCmd(RGB_OLED_HEIGHT-1);
    		HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin,GPIO_PIN_SET);//cs
    		HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin,GPIO_PIN_RESET); //cs
    		for (x = 0; x < 5*size; x++ ) {
    			if ( (((BigNumbers[ch][x+sy*10] >> y) & 0x01 ) & (size == FONT_2X)) |
    				 (((LargeNumbers[ch][x+sy*20] >> y) & 0x01 ) & (size == FONT_4X))

    				) {
    				color = chr_color;
    			}
    			else {
    				color = bg_color;
    			}
				_sendData(color >> 8);
				_sendData(color);
    		}
    	}
    	}
    }
    else {
    	for (y = 0; y<8; y++ ) {
    		for (sy = 0; sy<size; sy++ ) {
    			//set column point
    			_sendCmd(CMD_SET_COLUMN_ADDRESS);
    			_sendCmd(cx);
    			_sendCmd(RGB_OLED_WIDTH-1);
    			//set row point
    			_sendCmd(CMD_SET_ROW_ADDRESS);
    			_sendCmd(y*size + sy + cy);
    			_sendCmd(RGB_OLED_HEIGHT-1);
        		HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin,GPIO_PIN_SET);; //cs
        		HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin,GPIO_PIN_RESET);; //cs
    			for (x = 0; x<5; x++ ) {
    				if ((FontLookup[ch][x] >> y) & 0x01) {
    					color = chr_color;
    				}
    				else {
    					color = bg_color;
    				}
    				//SSD1331_drawPixel(x+cx, y+cy, color);
    				for (sx = 0; sx<size; sx++ ) {
    					_sendData(color >> 8);
    					_sendData(color);
    				}
    			}
    			_sendData(bg_color >> 8);
    			_sendData(bg_color);
        		HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin,GPIO_PIN_SET);; //cs

    		}
    	}
    }

    /////CHR_X++;
    //CHR_X += 6*size;
}

void SSD1331_IMG(const unsigned char *img, uint16_t x, uint16_t y, uint16_t width, uint16_t height) {
	uint16_t xx, yy;

	if ( (x + width > RGB_OLED_WIDTH) | (y+height > RGB_OLED_HEIGHT) ){
		return;
	}

	for (yy=0; yy<height; yy++) {
		//set column point
		_sendCmd(CMD_SET_COLUMN_ADDRESS);
		_sendCmd(x);
		_sendCmd(RGB_OLED_WIDTH-1);
		//set row point
		_sendCmd(CMD_SET_ROW_ADDRESS);
		_sendCmd(y + yy);
		_sendCmd(RGB_OLED_HEIGHT-1);
		HAL_GPIO_WritePin(DC_GPIO_Port, DC_Pin,GPIO_PIN_SET);; //cs
		HAL_GPIO_WritePin(CS_GPIO_Port, CS_Pin,GPIO_PIN_RESET);; //cs
		for (xx=0; xx<width*2; xx++) {
			_sendData(img[yy*width*2 + xx]);
		}
	}
}
